# scd

./: README.md  pyproject.toml
scd/: main.py
scd/logic/: downloader.py  naming.py
tests/: test_comics_dl.py
