[tool.poetry]
name = "scd"
version = "0.1.0"
description = "A tiny utility to automatically organize and download comics"
authors = ["Quentin Barbarat <q.barbarat@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
PySimpleGUI = "^4.55.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"
pyinstaller = "^4.7"

[tool.poetry.scripts]
scd = "scd.main:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
